fixing release version